# tables

./: .envrc  .eslintrc.cjs  .gitignore  ARCHITECTURE_DIAGRAMS.md  CLAUDE.md  README.md  THEMING_RULES.md  check_output.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  test_parse.rs  tsconfig.json  vite.config.js
docs/: CREDENTIAL_STORAGE_DESIGN.md  DATABASE_APP_ARCHITECTURE.md  DB_INTERFACE_PLAN.md  (+11 more)
src-tauri/: Cargo.toml  check_output.txt  check_output_2.txt  check_output_final.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: datasource.json  default.json
src-tauri/crates/sql-scope/: Cargo.toml
src-tauri/crates/sql-scope/src/: diagnostics.rs  dialect.rs  error.rs  ir.rs  join.rs  lib.rs  match.rs  schema.rs  types.rs
src-tauri/crates/sql-scope/src/parser/: mod.rs  mysql.rs  postgres.rs  splitter.rs  sqlite.rs
src-tauri/crates/sql-scope/src/scope/: cte.rs  mod.rs  resolver.rs  symbol.rs  tree.rs
src-tauri/crates/sql-scope/tests/: common.rs  wildcard_expansion.rs
src-tauri/migrations/: 001_create_themes_table.sql  001_initial.sql  002_add_type_system.sql  002_robust_fks.sql  002_seed_builtin_themes.sql  003_add_namespace_kind.sql  004_create_settings_table.sql  005_create_query_logs_table.sql  006_create_editor_sessions.sql  007_create_agent_tables.sql  008_add_provider.sql  009_create_turn_summaries.sql  010_functions_sequences_constraints.sql  011_agent_plans.sql  012_agent_thread_provider.sql
src-tauri/scripts/: generate_theme_seeds.sh
src-tauri/src/: adapter.rs  adapter_registry.rs  agent_manager.rs  aws_profile_manager.rs  backend_tests.rs  connection.rs  connection_manager.rs  constants.rs  credential_manager.rs  credentials.rs  crypto.rs  db_test.rs  dci_tests.rs  features.rs  harness.rs  introspection.rs  lib.rs  main.rs  metrics.rs  migration_runner.rs  migrations.rs  orchestrator.rs  pg_utils.rs  postgres_diagnostic_test.rs  schema_types.rs  settings.rs  sqlite_utils.rs
src-tauri/src/adapters/: mod.rs  postgres.rs  sqlite.rs
src-tauri/src/commands/: agent_commands.rs  athena_commands.rs  athena_commands_old.rs  aws_commands.rs  completion_commands.rs  connection_commands.rs  ddl_commands.rs  debug_commands.rs  editor_commands.rs  explain_commands.rs  export_commands.rs  feedback_commands.rs  font_commands.rs  introspection_commands.rs  llm_proxy.rs  mod.rs  pg_sprint_tests.rs  query_commands.rs  redis_commands.rs  settings_commands.rs  system_commands.rs  test_commands.rs  theme_commands.rs  unified_introspection.rs  update_commands.rs  util_commands.rs  window_commands.rs
src-tauri/src/completion/: context.rs  diagnostics.rs  document.rs  engine.rs  items.rs  mod.rs  parsing.rs  pg_integration_tests.rs  pg_test_helpers.rs  ranges.rs  scope_builder.rs  tests.rs
src-tauri/src/completion/analysis/: ambiguity.rs  builder.rs  mod.rs  scope.rs
src-tauri/src/completion/engines/: core.rs  mod.rs  postgres.rs  sqlite.rs
src-tauri/src/completion/schema/: graph.rs  loader.rs  mod.rs
src-tauri/src/configs/: elasticsearch.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs  s3.rs  sqlite.rs  validation.rs
src-tauri/src/plugins/: builtin.rs  core.rs  discovery.rs  mod.rs
src-tauri/src/themes/: catppuccin-latte.json  catppuccin-mocha.json  dracula-light.json  dracula.json  ember-dark.json  ember-light.json  forest-dark.json  forest-light.json  gruvbox-dark.json  gruvbox-light.json  iceberg-dark.json  iceberg-light.json  meadow-dark.json  meadow-light.json  monokai-light.json  monokai.json  neon-dark.json  neon-light.json  nord-light.json  nord.json  oceanic-dark.json  oceanic-light.json  paper-dark.json  paper.json  snow-dark.json  snow-light.json  solarized-dark.json  solarized-light.json  sunset-dark.json  sunset-light.json  tokyo-night-dark.json  tokyo-night-light.json
src-tauri/themes/: dracula.json  monokai.json  nord.json  solarized-dark.json
(+395 files in other folders)
