[package]
name = "tables"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tables_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled", "chrono"] }
keyring = "3.6.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "6.0"
redis = "1.0.2"
chrono = "0.4.38"
once_cell = "1.19"
mysql = "25.0.0"
mongodb = "2.8.2"
tokio-postgres = "0.7.10"
native-tls = "0.2"
postgres-native-tls = "0.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

