[workspace]
members = [".", "crates/sql-scope"]
resolver = "2"

[workspace.dependencies]
thiserror = "1"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[package]
name = "tables"
version = "0.0.2"
description = "A fast, native database client for modern developers"
authors = ["been-there-done-that"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tables_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled", "chrono", "column_decltype", "column_metadata"] }
keyring = "3.6.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "6.0"
redis = "1.0.2"
chrono = "0.4.38"
once_cell = "1.19"
mysql = "25.0.0"
mongodb = "2.8.2"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-log = "0.1"
log = "0.4"
aes-gcm = "0.10"
rand = "0.8"
zeroize = "1.7"
hex = "0.4"
sysinfo = "0.30"
async-trait = "0.1"

# SQL Completion Engine
tree-sitter = "0.26"
dashmap = "6"
petgraph = "0.8"
tree-sitter-sequel = "0.3.11"
tokio-util = { version = "0.7", features = ["rt"] }
font-kit = "0.14.3"
sqlformat = "0.5.0"
reqwest = { version = "0.13.1", features = ["stream", "json"] }
futures-util = "0.3.31"
tree-sitter-sql = "0.0.2"
sql-scope = { path = "crates/sql-scope" }
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
