[package]
name = "sql-scope"
version = "0.1.0"
edition = "2021"
description = "Multi-dialect SQL scope resolver and diagnostic engine"
license = "MIT"

[dependencies]
pg_query = "6.1"
sqlparser = { version = "0.61", features = [] }
indexmap = "2"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
